feat(backup commit): add loopSoundsHandler function, buggy

--- a/index.html
+++ b/index.html
@@ -6,18 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Prophet Thomas</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/howler/2.2.3/howler.min.js" integrity="sha512-6+YN/9o9BWrk6wSfGxQGpt3EUK6XeHi6yeHV+TYD2GR0Sj/cggRpXr1BrAQf0as6XslxomMUxXp2vIl+fv0QRA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css" integrity="sha512-1sCRPdkRXhBV2PBLUdRb4tMg1w2YPf37qatUFeS7zlBy7jJI8Lf4VHwWfZZfpXtYSLy85pkm9GaYVYMfw5BC1A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="style.css"></link>
     <script src="script.js" defer></script>
   </head>
   <body>
-    <audio id="1" src="sounds/1.mp3"></audio>
-    <audio id="2" src="sounds/2.mp3"></audio>
-    <audio id="3" src="sounds/3.mp3"></audio>
-    <audio id="4" src="sounds/1.mp3"></audio>
-    <audio id="5" src="sounds/2.mp3"></audio>
-    <audio id="6" src="sounds/2.mp3"></audio>
     
-    <div class="grid-wrapper">
+    
+    <div class="wrapper">
+      <div class="dashboard">
+        <div id="btn-play"><i class="fa-solid fa-circle-play"></i></div>
+      </div>
         <div class="grid"></div>
 
     </div>
