feat: loopSoundsHandler next step

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <div class="wrapper">
       <div class="dashboard">
         <div id="btn-play"><i class="fa-solid fa-circle-play"></i></div>
+        <button id="btn-stop">STOP</button>
       </div>
         <div class="grid"></div>
 
