fix(loopSoundsHandler): fix play event fires twice bug + refactor

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <div class="wrapper">
         <div class="dashboard">
           <div id="btn-play"><i class="fa-solid fa-circle-play"></i></div>
-          <button id="btn-stop">STOP</button>
+          <div id="btn-stop" class="hide"><i class="fa-solid fa-circle-stop "></i></div>
         </div>
         
       </div>
