refactor/feat: refactor style, add tile pics

--- a/index.html
+++ b/index.html
@@ -13,18 +13,16 @@
   </head>
   <body>
     
-    <div class="main-grid">
+    <div class="main">
       <div class="header"></div>
       <div class="wrapper">
-        <div class="dashboard">
+         <div class="dashboard">
           <div id="btn-play"><i class="fa-solid fa-circle-play"></i></div>
-          <div id="btn-stop" class="hide"><i class="fa-solid fa-circle-stop "></i></div>
-        </div>
+           <div id="btn-stop" class="hide"><i class="fa-solid fa-circle-stop "></i></div>
+        </div> 
         
       </div>
       <div class="grid"></div>
-
-      <div class="footer"></div>
     </div>
   </body>
 </html>
